deploy/components/httproutes/httproutes.gen.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: argocd
    argocd.argoproj.io/instance: network-httproutes
  name: argocd
  namespace: istio-ingress
spec:
  hostnames:
  - argocd.holos.localhost
  parentRefs:
  - name: default
    namespace: istio-ingress
  rules:
  - backendRefs:
    - name: argocd-server
      namespace: argocd
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: dev-httpbin
    argocd.argoproj.io/instance: network-httproutes
  name: dev-httpbin
  namespace: istio-ingress
spec:
  hostnames:
  - dev-httpbin.holos.localhost
  parentRefs:
  - name: default
    namespace: istio-ingress
  rules:
  - backendRefs:
    - name: httpbin
      namespace: dev-httpbin
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: dev-podinfo
    argocd.argoproj.io/instance: network-httproutes
  name: dev-podinfo
  namespace: istio-ingress
spec:
  hostnames:
  - dev-podinfo.holos.localhost
  parentRefs:
  - name: default
    namespace: istio-ingress
  rules:
  - backendRefs:
    - name: podinfo
      namespace: dev-podinfo
      port: 9898
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: httpbin
    argocd.argoproj.io/instance: network-httproutes
  name: httpbin
  namespace: istio-ingress
spec:
  hostnames:
  - httpbin.holos.localhost
  parentRefs:
  - name: default
    namespace: istio-ingress
  rules:
  - backendRefs:
    - name: httpbin
      namespace: prod-us-east-httpbin
      port: 80
    - name: httpbin
      namespace: prod-us-central-httpbin
      port: 80
    - name: httpbin
      namespace: prod-us-west-httpbin
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: kargo
    argocd.argoproj.io/instance: network-httproutes
  name: kargo
  namespace: istio-ingress
spec:
  hostnames:
  - kargo.holos.localhost
  parentRefs:
  - name: default
    namespace: istio-ingress
  rules:
  - backendRefs:
    - name: kargo-api
      namespace: kargo
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: podinfo
    argocd.argoproj.io/instance: network-httproutes
  name: podinfo
  namespace: istio-ingress
spec:
  hostnames:
  - podinfo.holos.localhost
  parentRefs:
  - name: default
    namespace: istio-ingress
  rules:
  - backendRefs:
    - name: podinfo
      namespace: prod-us-east-podinfo
      port: 9898
    - name: podinfo
      namespace: prod-us-central-podinfo
      port: 9898
    - name: podinfo
      namespace: prod-us-west-podinfo
      port: 9898
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: prod-us-central-podinfo
    argocd.argoproj.io/instance: network-httproutes
  name: prod-us-central-podinfo
  namespace: istio-ingress
spec:
  hostnames:
  - prod-us-central-podinfo.holos.localhost
  parentRefs:
  - name: default
    namespace: istio-ingress
  rules:
  - backendRefs:
    - name: podinfo
      namespace: prod-us-central-podinfo
      port: 9898
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: prod-us-east-podinfo
    argocd.argoproj.io/instance: network-httproutes
  name: prod-us-east-podinfo
  namespace: istio-ingress
spec:
  hostnames:
  - prod-us-east-podinfo.holos.localhost
  parentRefs:
  - name: default
    namespace: istio-ingress
  rules:
  - backendRefs:
    - name: podinfo
      namespace: prod-us-east-podinfo
      port: 9898
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: prod-us-west-podinfo
    argocd.argoproj.io/instance: network-httproutes
  name: prod-us-west-podinfo
  namespace: istio-ingress
spec:
  hostnames:
  - prod-us-west-podinfo.holos.localhost
  parentRefs:
  - name: default
    namespace: istio-ingress
  rules:
  - backendRefs:
    - name: podinfo
      namespace: prod-us-west-podinfo
      port: 9898
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: test-httpbin
    argocd.argoproj.io/instance: network-httproutes
  name: test-httpbin
  namespace: istio-ingress
spec:
  hostnames:
  - test-httpbin.holos.localhost
  parentRefs:
  - name: default
    namespace: istio-ingress
  rules:
  - backendRefs:
    - name: httpbin
      namespace: test-httpbin
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: test-podinfo
    argocd.argoproj.io/instance: network-httproutes
  name: test-podinfo
  namespace: istio-ingress
spec:
  hostnames:
  - test-podinfo.holos.localhost
  parentRefs:
  - name: default
    namespace: istio-ingress
  rules:
  - backendRefs:
    - name: podinfo
      namespace: test-podinfo
      port: 9898
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: uat-httpbin
    argocd.argoproj.io/instance: network-httproutes
  name: uat-httpbin
  namespace: istio-ingress
spec:
  hostnames:
  - uat-httpbin.holos.localhost
  parentRefs:
  - name: default
    namespace: istio-ingress
  rules:
  - backendRefs:
    - name: httpbin
      namespace: uat-httpbin
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: uat-podinfo
    argocd.argoproj.io/instance: network-httproutes
  name: uat-podinfo
  namespace: istio-ingress
spec:
  hostnames:
  - uat-podinfo.holos.localhost
  parentRefs:
  - name: default
    namespace: istio-ingress
  rules:
  - backendRefs:
    - name: podinfo
      namespace: uat-podinfo
      port: 9898
    matches:
    - path:
        type: PathPrefix
        value: /
